--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-
 <!-- <books></books> -->
-<cover-pages></cover-pages>
 <!-- <login></login> -->
-<!-- <book-shelf></book-shelf> -->
-<router-outlet></router-outlet>
+<cover-pages></cover-pages>
+<!-- 
+<book-shelf></book-shelf>
+<router-outlet></router-outlet> -->
