--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!-- <books></books> -->
 <!-- <login></login> -->
 <cover-pages></cover-pages>
-<!-- 
 <book-shelf></book-shelf>
-<router-outlet></router-outlet> -->
+<!-- 
+<router-outlet></router-outlet> 
+-->
